<resources>
    <string name="app_name">Kaskelotti</string>
    <string name="app_label">Kaskelotti</string>
    <string name="search_hint">Search words in English or Finnish</string>
    <string name="tense_fragment_vartalo">Vartalo / stem : </string>
    <string name="mina">Minä</string>
    <string name="sina">Sinä</string>
    <string name="han">Hän</string>
    <string name="me">Me</string>
    <string name="te">Te</string>
    <string name="he">He</string>
    <string name="search_description">Translation between Finish and English</string>
</resources>
